--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,1 +1,57 @@
-<p>login works!</p>
+<div class="row col-sm-12 mt-5">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-6">
+    <form
+      name="form"
+      (ngSubmit)="f.form.valid && handleLoginSubmit()"
+      #f="ngForm"
+      novalidate
+    >
+      <div class="form-group">
+        <input
+          type="text"
+          placeholder="Username"
+          class="form-control"
+          name="username"
+          [(ngModel)]="form.username"
+          #username="ngModel"
+          required
+        />
+        <div *ngIf="f.submitted && username.invalid">
+          <div
+            *ngIf="username && username.errors && username.errors.required"
+            class="text-danger"
+          >
+            Ce champs est obligatire
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          [(ngModel)]="form.password"
+          #password="ngModel"
+          required
+          placeholder="Mot de passe"
+        />
+        <div *ngIf="f.submitted && password.invalid">
+          <div
+            *ngIf="password && password.errors && password.errors.required"
+            class="text-danger"
+          >
+            Ce champs est obligatoire
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-block btn-outline-primary">Se connecter</button>
+        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
+          {{ errorMessage }}
+        </div>
+      </div>
+    </form>
+    <div class="col-sm-2"></div>
+  </div>
+</div>
