--- a/src/app/signup/signup/signup.component.html
+++ b/src/app/signup/signup/signup.component.html
@@ -1,1 +1,78 @@
-<p>signup works!</p>
+<div class="row col-sm-12 mt-5">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+    <form
+      name="form"
+      (ngSubmit)="f.form.valid && handleSignUpSubmit()"
+      #f="ngForm"
+      novalidate
+    >
+      <div class="form-group">
+        <input
+          type="text"
+          placeholder="Username"
+          class="form-control"
+          name="username"
+          [(ngModel)]="form.username"
+          #username="ngModel"
+          required
+        />
+        <div *ngIf="f.submitted && username.invalid">
+          <div *ngIf="username && username.errors && username.errors.required">
+            Ce champs est obligatoire
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <input
+          type="password"
+          placeholder="Mot de passe"
+          class="form-control"
+          name="password"
+          [(ngModel)]="form.password"
+          #password="ngModel"
+          required
+        />
+        <div *ngIf="f.submitted && password.invalid">
+          <div
+            class="text-danger"
+            *ngIf="password && password.errors && password.errors.required"
+          >
+            Ce champs est obligatoire
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <input
+          type="password"
+          placeholder="Confirmer"
+          class="form-control"
+          name="confirmPassword"
+          [(ngModel)]="form.confirmPassword"
+          #confirmPassword="ngModel"
+          required
+        />
+        <div *ngIf="f.submitted && confirmPassword.invalid">
+          <div
+            class="text-danger"
+            *ngIf="
+              confirmPassword &&
+              confirmPassword.errors &&
+              confirmPassword.errors.required
+            "
+          >
+            Ce champs est obligatoire
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-outline-primary btn-block">S'inscrire</button>
+        <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">
+          <br />{{ errorMessage }}
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="col-sm-3"></div>
+</div>
